# brevis-vera

./: .gitignore  Cargo.toml  README.md  pico-guide.md
docs/: AOT_OPTIMIZED_EMULATOR_GUIDE.md  ecdsa_p256_verify_guide.md  extra_public_key.md  extract_signature.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: ImageEditor.tsx  ImageUploader.tsx  ProvenanceDisplay.tsx  VerificationResult.tsx
frontend/src/services/: api.ts
frontend/src/styles/: design-system.css
frontend/src/types/: index.ts
openspec/: project.md
openspec/changes/add-capture-provenance-layer/: proposal.md  tasks.md
openspec/changes/add-editing-layer/: proposal.md  tasks.md
src/: lib.rs  main.rs
src/editor/: api.rs  mod.rs  operations.rs  types.rs
src/provenance/: api.rs  extractor.rs  mod.rs  parser.rs  reader.rs  types.rs
src/zk/: api.rs  circuits.rs  mod.rs  prover.rs  types.rs
tests/: editing_api.rs  integration.rs  pico_vm_proof.rs  zk_proof.rs
zk-guest/app/: Cargo.toml
zk-guest/app/aot-chunks/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_000/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_000/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_001/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_001/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_002/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_002/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_003/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_003/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_004/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_004/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_005/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_005/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_006/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_006/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_007/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_007/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_008/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_008/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_009/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_009/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_010/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_010/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_011/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_011/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_012/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_012/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_013/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_013/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_014/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_014/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_015/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_015/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_016/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_016/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_017/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_017/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_018/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_018/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_019/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_019/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_020/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_020/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_021/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_021/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_022/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_022/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_023/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_023/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_024/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_024/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_025/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_025/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_026/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_026/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_027/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_027/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_028/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_028/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_029/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_029/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_030/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_030/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_031/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_031/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_032/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_032/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_033/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_033/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_034/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_034/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_035/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_035/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_036/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_036/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_037/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_037/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_038/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_038/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_039/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_039/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_040/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_040/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_041/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_041/src/: lib.rs
zk-guest/app/aot-chunks/chunks/chunk_042/: Cargo.toml
zk-guest/app/aot-chunks/chunks/chunk_042/src/: lib.rs
zk-guest/app/aot-chunks/src/: lib.rs
zk-guest/app/elf/: README.md  riscv32im-pico-zkvm-elf
zk-guest/app/src/: main.rs
zk-guest/lib/: Cargo.toml
zk-guest/lib/src/: lib.rs
(+16 files in other folders)
