[package]
name = "brevis-vera"
version = "0.1.0"
edition = "2024"
description = "End-to-end digital media authenticity attestation system"

[[bin]]
name = "brevis-vera"
path = "src/main.rs"

[features]
default = []
## Enable the Pico ZKVM prover backend for real STARK/SNARK proof generation.
## Requires: nightly-2025-08-04, `cargo pico build` for the guest ELF binary.
pico = ["dep:pico-sdk", "dep:alloy-sol-types", "dep:bincode", "dep:brevis-vera-zk-lib"]

[dependencies]
c2pa = { version = "0.36", features = ["file_io", "unstable_api"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hex = "0.4"
photon-rs = "0.3"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tempfile = "3"

# Pico ZKVM (optional — enabled by the "pico" feature)
pico-sdk = { git = "https://github.com/brevis-network/pico", optional = true }
alloy-sol-types = { version = "0.8.0", optional = true }
bincode = { version = "1.3", optional = true }
brevis-vera-zk-lib = { path = "zk-guest/lib", optional = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
hyper = "1"
http-body-util = "0.1"
