[workspace]
members = [".", "zk-guest/lib", "zk-guest/app", "zk-guest/app/aot-chunks"]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
keywords = ["pico", "zkvm", "aot", "brevis"]
categories = ["cryptography"]

[workspace.dependencies]
# Pico dependencies
pico-vm = { git = "https://github.com/brevis-network/pico" }
hashbrown = "0.14"
p3-koala-bear = "0.2"
log = "0.4"
tiny-keccak = "2.0"
num-bigint = "0.4"
num-traits = "0.2"
p3-field = "0.2"
p3-symmetric = "0.2"
typenum = "1.17"
hybrid-array = "0.2"
num = "0.4"
k256 = "0.13"
p256 = "0.13"
once_cell = "1.19"
halo2curves = "0.2"
bls12_381 = "0.9"
curve25519-dalek = "4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package]
name = "brevis-vera"
version.workspace = true
edition.workspace = true
description = "End-to-end digital media authenticity attestation system"

[[bin]]
name = "brevis-vera"
path = "src/main.rs"

[features]
default = ["pico-aot"]
pico = ["dep:pico-sdk", "dep:alloy-sol-types", "dep:bincode", "dep:brevis-vera-zk-lib", "dep:brevis-vera-aot-dispatch", "dep:pico-vm"]
pico-aot = ["pico", "dep:pico-vm"]

[dependencies]
c2pa = { version = "0.36", features = ["file_io", "unstable_api"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
hex = "0.4"
der-parser = "9"
num-bigint = "0.4"
openssl = "0.10"
coset = "0.3"
ciborium = "0.2"
photon-rs = "0.3"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
http = "1"

# Pico ZKVM (optional — enabled by the "pico" feature)
pico-sdk = { git = "https://github.com/brevis-network/pico", optional = true }
pico-vm = { git = "https://github.com/brevis-network/pico", optional = true }
alloy-sol-types = { version = "0.8.0", optional = true }
bincode = { version = "1.3", optional = true }
brevis-vera-zk-lib = { path = "zk-guest/lib", optional = true }
brevis-vera-aot-dispatch = { path = "zk-guest/app/aot-chunks", default-features = false, optional = true }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
hyper = "1"
http-body-util = "0.1"
